Feature: Support event target groups
StdCommands - introduced command: std.User
User - introduced .groups
Authenticator - introduced .SetUserOptions()
EventTargets - introduced .groups
SendMessage - introduced .groups
