# Json.Tests/assets~/Schema/JSON/EntityIdStore/openapi.json
@@ -218,6 +218,33 @@
         }
       }
     },
+    "/?command=std.User": {
+      "post": {
+        "summary":    "change and return user groups",
+        "tags":       ["commands"],
+        "requestBody": {          
+          "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "Friflo.Json.Fliox.Hub.DB.Cluster.json#/definitions/UserOptions"
+                }
+              }
+            }
+        },
+        "responses": {
+          "200": {             
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "Friflo.Json.Fliox.Hub.DB.Cluster.json#/definitions/UserResult"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/guidEntities": {
       "get": {
         "summary":    "return / filter multiple records from container guidEntities",
